PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2007, PHP 5.2.1RC3
- Added CURLOPT_TCP_NODELAY constant to Curl extension. (Sara)
- Improved proc_open(). Now on Windows it can run external commands not through
  CMD.EXE. (Dmitry)
- Fixed bug #40083 (milter SAPI functions always return false/null). (Tony)
- Fixed bug #40079 (php_get_current_user() not thread safe). (Ilia, wharmby
  at uk dot ibm dot com)
- Fixed bug #40076 (zend_alloc.c: Value of enumeration constant must be in
  range of signed integer). (Dmitry)
- Fixed bug #40073 (exif_read_data dies on certain images). (Tony, Marcus)
- Fixed bug #40036 (empty() does not work correctly with ArrayObject when using
  ARRAY_AS_PROPS). (Ilia)
- Fixed bug #40002 (Try/Catch performs poorly). (Dmitry)
- Fixed bug #39990 (Cannot "foreach" over overloaded properties). (Dmitry)
- Fixed bug #39979 (PGSQL_CONNECT_FORCE_NEW will causes next connect to
  establish a new connection). (Ilia)
- Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag,
  not entity). (Hannes)
- Fixed bug #39449 (Overloaded array properties do not work correctly).
  (Dmitry)
- Fixed bug #39394 (Missing check for older variants of openssl). (Ilia)
- Fixed bug #38604 (Fixed request time leak inside foreach() when itterating 
  through virtual properties). (Dmitry)
- Fixed bug #38325 (spl_autoload_register() gaves wrong line for "class
  not found"). (Ilia)
- Fixed bug #36214 (__get method works properly only when conditional operator
  is used). (Dmitry)
- Fixed bug #35106 (nested foreach fails when array variable has a reference).
  (Dmitry)

04 Jan 2007, PHP 5.2.1RC2
- Small optimization of the date() function (Matt,Ilia)
- Removed dependency from SHELL32.DLL. (Dmitry)
- Added function stream_socket_shutdown(). It is a wraper for system shutdown()
  function, that shut downs part of a full-duplex connection. (Dmitry)